동영상 삽입 + 체크박스

--- a/1.html
+++ b/1.html
@@ -27,6 +27,9 @@ li는 목차를 만드는 태그, ol은 ordered list의 약자, ul은 unordered 
 li태그는 반드시 부모 태그가 필요하다. ul, ol태그는 반드시 자식 태그가 필요하다.
 
 <h2>HTML이란 무엇인가?</h2>
+<p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/7T7r_oSp0SE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>  
+</p>
 h1, h2, h3, h4 는 제목을 만드는 태그<br>
 총 네가지 크기의 제목을 만들 수 있음
 <p><a href="https://www.w3.org/TR/2011/WD-html5-20110405/" target="_blank" title="html5 specification">Hypertext Markup Language (HTML)</a> is the standard
