댓글 기능 추가

--- a/1.html
+++ b/1.html
@@ -46,5 +46,26 @@ p style="margin" css 문법이며 태그와 태그 사이의 여백을 margin이
 img태그는 이미지 삽입태그. src는 source의 준말. width는 이미지의 크기<br>
 a태그는 앵커(링크 태그) href는 하이퍼텍스트(링크) reference의 준말 target="_black"라는 뜻은 새탭으로 열기를 하고 싶을 때<br>
 뒤에 붙는 title="html5 specification"은 툴팁으로 이게 무엇인지 알려주고 싶을 때 씀
+<p>
+    <div id="disqus_thread"></div>
+<script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://web1-rc8eojwl6k.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</p>
 </body>
 </html>
